# pc-game-udp

./: CMakeLists.txt  app_core.cpp  app_core.h  auth_keyauth.cpp  auth_keyauth.h  capture_wgc.cpp  capture_wgc.h  encoder_jpeg.cpp  encoder_jpeg.h  imgui_impl_dx11.cpp  imgui_impl_win32.cpp  main.cpp  udp_sender.cpp  udp_sender.h  ui.cpp  ui.h
Text/: CMakeLists.txt  README.md  main.cpp  streamer.cpp  streamer.h  ui.cpp  ui.h
